<resources>
    <string name="app_name">TrackingScreenUI</string>
    <string name="track_order">Track Order</string>
    <string name="cancel">Cancel</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="order_number">Order number</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="order_number_value">#C862966</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confimed">Your order has been confimed</string>
    <string name="order_processed">Order Processed</string>
    <string name="we_are_preparing_your_order">We are preparing your order</string>
    <string name="ready_to_pickup">Ready To Pickup</string>
    <string name="your_order_is_ready_for_pickup">Your order is ready for pickup</string>
</resources>
